<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/about_dialog_panel"
        style="@style/AquaThemeDialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <!-- ===== Title ===== -->

        <RelativeLayout
            android:id="@+id/about_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/about_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/about_dialog_fb_logo"
                android:singleLine="true"
                android:text="@string/fb_about"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/about_dialog_fb_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:src="@drawable/dialog_fb" />
        </RelativeLayout>

        <!-- ===== Content ===== -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/about_dialog_content"
                    style="@style/DialogRankContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/d_dialog_border"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp" >

                    <!-- ==== Si no hay contenido  ==== -->

                    <TextView
                        android:id="@+id/about_app_version_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fb_about_version"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_app_version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/about_app_version_lbl"
                        android:text="@string/fb_version_name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_rights"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/about_app_version_lbl"
                        android:gravity="left"
                        android:text="@string/fb_company_rights"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/about_dialog_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/about_rights"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="5dp"
                        android:gravity="left"
                        android:text="@string/fb_about_message"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/about_dialog_panel_button_ctrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/b_dialog_border"
            android:minHeight="35dp"
            android:padding="2dp" >

            <Button
                android:id="@+id/about_btn_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/a_btn_ranking_selector"
                android:text="@string/fb_about_share_button" />

            <Button
                android:id="@+id/about_btn_web"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/a_btn_ranking_selector"
                android:text="@string/fb_about_button_moreapps" />

            <Button
                android:id="@+id/about_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/a_btn_ranking_selector"
                android:text="@string/fb_common_button_accept" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>