<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/high_score_dialog_panel"
        style="@style/AquaThemeDialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <!-- ===== Title ===== -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/high_score_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/high_score_dialog_fb_logo"
                android:singleLine="true"
                android:text="@string/fb_upload_score"
                android:textSize="23sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/high_score_dialog_fb_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:src="@drawable/dialog_fb" />
        </RelativeLayout>

        <!-- ===== Content ===== -->

        <RelativeLayout
            android:id="@+id/high_score_dialog_content"
            style="@style/DialogRankContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/d_dialog_border"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- android:padding="20dp" -->


            <!-- ==== Si no hay contenido  ==== -->

            <TextView
                android:id="@+id/high_score_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/fb_upload_score_gameover"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/high_score_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/high_score_msg"
                android:layout_marginBottom="-15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="10dp"
                android:hint="@string/fb_upload_score_enter_name" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/high_score_dialog_panel_button_ctrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/b_dialog_border"
            android:minHeight="35dp"
            android:padding="2dp" >

            <Button
                android:id="@+id/high_score_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/a_btn_ranking_selector"
                android:maxWidth="150px"
                android:text="@string/fb_common_button_accept" />

            <Button
                android:id="@+id/high_score_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/a_btn_ranking_selector"
                android:text="@string/fb_upload_score_upload" />

            <Button
                android:id="@+id/high_score_btn_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/a_btn_ranking_selector"
                android:text="@string/fb_about_share_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>