<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_game_dialog_panel"
        style="@style/AquaThemeDialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="2dp">

        <!-- ===== Title ===== -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/moon_get_heavy"
                android:text="@string/fb_new_game"
                android:textColor="#F1AD0C"
                android:textSize="20sp" />


        </RelativeLayout>

        <!-- ===== Content ===== -->

        <RelativeLayout
            android:id="@+id/new_game_dialog_content"
            style="@style/DialogRankContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_regular"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/fb_new_game_msg"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/new_game_dialog_panel_button_ctrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="35dp"
            android:orientation="vertical"
            android:padding="2dp">

            <Button
                android:id="@+id/new_game_btn_ok"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_height="48dp"
                android:background="@drawable/btn_play_home"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/fb_common_button_accept"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/new_game_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_height="48dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_play_home_secondary"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/fb_common_button_cancel"
                android:textAllCaps="true"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>