<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/help_game_dialog_panel"
        style="@style/AquaThemeDialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <!-- ===== Title ===== -->

        <RelativeLayout
            android:id="@+id/help_game_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/help_game_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/moon_get_heavy"
                android:textColor="#F1AD0C"
                android:textSize="20sp"
                android:text="@string/fb_help"

                />

            <ImageView
                android:id="@+id/help_game_dialog_fb_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:src="@drawable/dialog_fb" />
        </RelativeLayout>

        <!-- ===== Content ===== -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/help_game_dialog_content"
                    style="@style/DialogRankContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp" >

                    <!-- ==== Si no hay contenido  ==== -->

                    <TextView
                        android:id="@+id/help_game_dialog_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/raleway_regular"
                        android:textSize="20sp"
                        android:gravity="left"
                        android:text="@string/fb_help_paragraph1"
                         />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/help_game_dialog_panel_button_ctrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/help_game_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_play_home_secondary"
                android:text="@string/fb_common_button_accept"
                android:fontFamily="@font/raleway_bold"
                android:textAllCaps="true"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>